--- a/public/main.css
+++ b/public/main.css
@@ -18,7 +18,7 @@ body {
    overflow: hidden;
    margin: 0 !important;
    padding: 0 !important;
-   background: linear-gradient(13deg,#6600cc -20%, #3b3444 40%);
+   background: linear-gradient(13deg,#6600cc -20%, #2d1b45 40%);
    background-repeat: no-repeat;
    background-size: contain;
    color: white;
