--- a/public/main.css
+++ b/public/main.css
@@ -18,7 +18,7 @@ body {
    overflow: hidden;
    margin: 0 !important;
    padding: 0 !important;
-   background: linear-gradient(13deg,#592ca0 -20%, #291049 40%);
+   background: linear-gradient(13deg,#432179 -20%, #1d0e30 40%);
    background-repeat: no-repeat;
    background-size: contain;
    color: white;
